--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^4.4.1",
     "gulp": "^4.0.2",
-    "gulp-template-html": "^0.2.2"
-  }
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-template-html": "^0.2.2",
+    "gulp-uglify-es": "^2.0.0"
+  },
+  "dependencies": {}
 }
