--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webstarter-v2.0",
+  "name": "webstarter-gulp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
