Commenting package.json, *-lock, while project is on hold to avoid vulnarability errors.

--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
-{
-  "name": "webstarter-gulp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "bootstrap": "^4.6.0",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^5.0.0",
-    "gulp-template-html": "^0.2.2",
-    "gulp-uglify-es": "^2.0.0",
-    "gulp-wrapper": "^1.0.0"
-  },
-  "dependencies": {
-    "bl": "^1.2.3"
-  }
-}
+//{
+//  "name": "webstarter-gulp",
+//  "version": "1.0.0",
+//  "description": "",
+//  "main": "index.js",
+//  "scripts": {
+//    "test": "echo \"Error: no test specified\" && exit 1"
+//  },
+//  "keywords": [],
+//  "author": "",
+//  "license": "ISC",
+//  "devDependencies": {
+//    "bootstrap": "^4.6.0",
+//    "gulp": "^4.0.2",
+//    "gulp-concat": "^2.6.1",
+//    "gulp-imagemin": "^7.1.0",
+//    "gulp-sass": "^5.0.0",
+//    "gulp-template-html": "^0.2.2",
+//    "gulp-uglify-es": "^2.0.0",
+//    "gulp-wrapper": "^1.0.0"
+//  },
+//  "dependencies": {
+//    "bl": "^1.2.3"
+//  }
+//}
