--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
-//{
+// {
 //  "name": "webstarter-gulp",
 //  "version": "1.0.0",
 //  "description": "",
 //  "main": "index.js",
 //  "scripts": {
-//    "test": "echo \"Error: no test specified\" && exit 1"
+//   "test": "echo \"Error: no test specified\" && exit 1"
 //  },
 //  "keywords": [],
 //  "author": "",
 //  "license": "ISC",
 //  "devDependencies": {
-//    "bootstrap": "^4.6.0",
-//    "gulp": "^4.0.2",
-//    "gulp-concat": "^2.6.1",
-//    "gulp-imagemin": "^7.1.0",
-//    "gulp-sass": "^5.0.0",
-//    "gulp-template-html": "^0.2.2",
-//    "gulp-uglify-es": "^2.0.0",
-//    "gulp-wrapper": "^1.0.0"
+//   "bootstrap": "^5.2.3",
+//   "gulp": "^3.9.1",
+//   "gulp-concat": "^2.6.1",
+//   "gulp-imagemin": "^4.1.0",
+//   "gulp-sass": "^5.1.0",
+//   "gulp-template-html": "^0.2.2",
+//   "gulp-uglify-es": "^3.0.0",
+//   "gulp-wrapper": "^0.1.2"
 //  },
 //  "dependencies": {
-//    "bl": "^1.2.3"
+//   "bl": "^6.0.0",
+//   "npm-check-updates": "^16.6.3"
 //  }
-//}
+// }
